Fix test compilation
Signed-off-by: David Schwilk <david.schwilk@bosch.io>